# rwDrv

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  ebbHelper.c  ebbHelper.cpp  ebbchar.h  krw.h  mychar.c  testebbchar.c  testebbchar.cpp
drv_krw/: CMakeLists.txt  README.md  drv_krw.cpp  krw.h
include/: drv_share.h
rw_char/: CMakeLists.txt  README.md  rw_char.c
targkrw/: CMakeLists.txt  README.md  kernProc.cpp  krw.cpp  linux_krwp.h  linuxkern_tools.h  oskalloc.h
