cmake_minimum_required(VERSION 3.0.0)
project(rwDrv VERSION 0.1.0)

if(NOT DEFINED ANDROID_TOOL_BASE)
    message("no ANDROID_TOOL_BASE, setting to working directory")
    set(ANDROID_TOOL_BASE ${CMAKE_CURRENT_SOURCE_DIR})

    if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        set(MY_HOST_COMPILER xnu)
        set(RW_DRIVER rw_kext)
    elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
        set(MY_HOST_COMPILER linux)
        set(RW_DRIVER rwDrv)
    elseif (${CMAKE_SYSTEM_NAME} MATCHES "Android")
        set(ARCH "arm64")
        set(MY_HOST_COMPILER linux)
        set(RW_DRIVER rwDrv)
    elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
        set(MY_HOST_COMPILER windows)
        set(RW_DRIVER winkrw)
    elseif (${CMAKE_SYSTEM_NAME} MATCHES "Metalkit")
        set(MY_HOST_COMPILER metalkit)
        set(RW_DRIVER metalkit_api)
    else()
        message( FATAL_ERROR "need to be compiling from a valid host, can't be ${CMAKE_SYSTEM_NAME}" )
    endif()

    if (NOT DEFINED ARCH)
        set(ARCH ${CMAKE_HOST_SYSTEM_PROCESSOR})
    endif()

endif()

add_subdirectory(drv_krw)
add_subdirectory(targkrw)
add_subdirectory(rw_char)
